--- a/mini_project.ipynb
+++ b/mini_project.ipynb
@@ -15,7 +15,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 3\n",
     "# Продвинутый Pandas и знакомство с визуализацией данных на Python"
    ]
   },
@@ -23,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 1 \"Импортируйте библиотеку pandas как pd. Загрузите два датасета user_data и logs. Проверьте размер таблицы, типы переменных, посмотрите на описательную статистику.\" \n",
+    "# Задача 1 \"Импортируйте библиотеку pandas как pd. Загрузите два датасета user_data и logs. Проверьте размер таблицы, типы переменных, посмотрите на описательную статистику.\" \n",
     "\n",
     "<font size=5>Вопрос: Сколько уникальных значений принимает переменная platform?</font>"
    ]
@@ -326,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2 \"Какой клиент совершил больше всего успешных операций?\"\n",
+    "# Задача 2 \"Какой клиент совершил больше всего успешных операций?\"\n",
     "\n",
     "<font size=5>Если несколько пользователей совершили одинаковое число успешных действий, перечислите их идентификаторы (client) через запятую и пробел в порядке возрастания.</font>"
    ]
@@ -476,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 3 \"С какой платформы осуществляется наибольшее количество успешных операций?\""
+    "# Задача 3 \"С какой платформы осуществляется наибольшее количество успешных операций?\""
    ]
   },
   {
@@ -553,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 4 \"Какая платформа наиболее популярна среди премиумных клиентов?\""
+    "# Задача 4 \"Какая платформа наиболее популярна среди премиумных клиентов?\""
    ]
   },
   {
@@ -796,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 5 \"Визуализируйте распределение возраста клиентов в зависимости от типа клиента (обычный или премиум), используя библиотеку seaborn с параметрами цвета по умолчанию. Какой график получится в результате?\"\n",
+    "# Задача 5 \"Визуализируйте распределение возраста клиентов в зависимости от типа клиента (обычный или премиум), используя библиотеку seaborn с параметрами цвета по умолчанию. Какой график получится в результате?\"\n",
     "\n",
     "<font size=5>Используйте датасет, который вы получили на предыдущем шаге</font>"
    ]
@@ -1205,7 +1204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 6 \"Визуализируйте число успешных операций, сделанных на платформе computer, в зависимости от возраста, используя sns.countplot. По оси x – возраст, y – число успешных операций. Если размер графика получается небольшим, можно добавить plt.figure(figsize=(12, 8)) в начало соответствующей ячейки.\" \n",
+    "# Задача 6 \"Визуализируйте число успешных операций, сделанных на платформе computer, в зависимости от возраста, используя sns.countplot. По оси x – возраст, y – число успешных операций. Если размер графика получается небольшим, можно добавить plt.figure(figsize=(12, 8)) в начало соответствующей ячейки.\" \n",
     "<font size=5>Вопрос: Клиенты какого возраста совершили наибольшее количество успешных действий?</font>"
    ]
   },
